final changes to assignment

--- a/hiring_application_activity.ipynb
+++ b/hiring_application_activity.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "10"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
        " ...]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
        "5000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1170,7 @@
        " [94, 78, 84, 83, 68, 63, 76]]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1284,13 +1284,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "selection = list()\n",
     "\n",
-    "for applicant in sample_data"
+    "for applicant in sample_data:\n",
+    "    average = ((applicant[0] + applicant[1] + applicant[2] + applicant[3] + applicant[4] + applicant[5]) / 6)\n",
+    "    if average >= 85:\n",
+    "        selection += [applicant]\n",
+    "print(selection)\n"
    ]
   },
   {
@@ -1306,11 +1318,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[93, 89, 63, 88, 60, 73, 80], [100, 63, 57, 96, 58, 71, 78], [81, 91, 99, 78, 57, 87, 86], [86, 89, 64, 81, 69, 93, 92], [78, 63, 88, 95, 59, 98, 90], [55, 74, 68, 55, 69, 94, 80], [64, 77, 75, 92, 77, 72, 83], [94, 78, 84, 83, 68, 63, 76]]\n"
+     ]
+    }
+   ],
    "source": [
-    "## your algorithm  description of how you would write one, exmaples of ideas: weight to some classes over others, probability of selection for people at 79 instead of 80, etc. can do code or in words but just consider the grade data"
+    "## average of cs classes vs overall average\n",
+    "selection = list()\n",
+    "\n",
+    "for applicant in sample_data:\n",
+    "    average = ((applicant[0] + applicant[1] + applicant[2] + applicant[3] + applicant[4] + applicant[5]) / 6)\n",
+    "    difference = (average - applicant[6]) ##negative means overall higher than cs, positive means cs higher than overall\n",
+    "    if difference <= 10:\n",
+    "        selection += [applicant]\n",
+    "\n",
+    "print(selection)\n"
    ]
   },
   {
@@ -1319,8 +1348,18 @@
    "source": [
     "Questions to Answer: \n",
     "1. What criteria did you choose to select finalists? How did you choose that criteria?\n",
-    "2. Roughly what percentage of applicants does your algorithm pass on as finalists? Is that enough? If Moogle asked you to take a more aggressive approach with your algorithm, are there any tradeoffs?"
+    "\n",
+    "I chose to consider the difference between an applicant's overall GPA and the average of their CS courses. I think that it would be important for an applicant to have skills outside of simply CS, and it would also elimate applicants who focused and did well on CS courses but put very little effort into courses outside of that category. \n",
+    "\n",
+    "2. Roughly what percentage of applicants does your algorithm pass on as finalists? Is that enough? If Moogle asked you to take a more aggressive approach with your algorithm, are there any tradeoffs?\n",
+    "    \n",
+    "My algorithm would pass about 80% of applicants. It is not enough, but if I were to take a more aggressive approach it could eliminate applicants for unrelated reasons. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1379,6 +1418,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1386,11 +1432,19 @@
     "\n",
     "3. What systemic advantages/disadvantages are your algorithms likely to amplify?\n",
     "\n",
+    "        They could amplify the many advantages/disadvantages that make grades an imperfect reflection of someone's academic skill. A person could have a lower grade because they had to keep multiple jobs on top of school, or they could be very smart but panic in testing situations.\n",
+    "\n",
     "4. What does it mean to design a fair algorithm?\n",
+    "\n",
+    "        A fair algorithm would take these possible advantages/disadvantages into consideration as well as things like the possible scenarios given above.\n",
     "\n",
     "5. If you had access to additional data beyond grades (e.g., extracurricular activities, internships, letters of recommendation), how might you incorporate it into your selection process? Would it make your algorithm fairer or introduce new biases?\n",
     "\n",
-    "6. How do current hiring filter algorithms work? What problems do they encounter? How do these algorithms broadly compare to the ones we wrote today? (Some example articles discussing hiring filters linked below in citations but you're not limited to these examples) \n"
+    "        It would be good to include data beyond grades, but this data would most likely also include very similar biases to the ones encountered when looking at grades. This would be especially prevalent with something like innternships, as someone could have had trouble getting into internships because those also had biases in the selection processes.\n",
+    "\n",
+    "6. How do current hiring filter algorithms work? What problems do they encounter? How do these algorithms broadly compare to the ones we wrote today? (Some example articles discussing hiring filters linked below in citations but you're not limited to these examples) \n",
+    "\n",
+    "        Current hiring filter algorithms are used to lessen the work in large-scale hiring processes. Unfortunately, there is a lot of biases unknowingly built into these algorithms. Some of the criteria used to automatically reject people are things that should not be decided by a simple algorithm, as there could be many others reasons for a person to not meet them.\n"
    ]
   },
   {
